get student course content
